feat: embedded jlinked jvm bundle
Signed-off-by: Sam Gammon <sam@elide.dev>